<resources>
    <string name="app_name">Color Flood</string>

    <!-- Game Activity -->
    <string name="game_seed_copied">Board seed copied to clipboard</string>

    <!-- End Game Dialog -->
    <string name="endgame_win_title">Excellent</string>
    <string name="endgame_win_text" formatted="false">You flooded the board in %d moves</string>
    <string name="endgame_old_highscore_text" formatted="false">Personal best for this board type: %d moves</string>
    <string name="endgame_new_highscore_text">New personal best for this board type!</string>
    <string name="endgame_lose_title">Game Over</string>
    <string name="endgame_new_game_button">New Game</string>
    <string name="endgame_replay">Replay</string>
    <string name="endgame_seed" fomatted="false">Seed: %s (tap to copy)</string>

    <!-- Seed Dialog -->
    <string name="seed_dialog_title">New game from seed</string>
    <string name="seed_dialog_edittext_prefix">Seed:</string>
    <string name="seed_dialog_start">Start</string>
    <string name="seed_dialog_cancel">Cancel</string>

    <!--Settings Activity-->
    <string name="settings_settings">Settings</string>
    <string name="settings_num_colors">Number of Colors</string>
    <string name="settings_board_size">Board Size</string>
    <string name="settings_apply_button">Apply</string>
    <string name="settings_color_blind">Color Blind Mode</string>
    <string name="settings_old_colors">Old Color Scheme</string>
    <string name="settings_clear_high_scores_button">Clear Highscores</string>
    <string name="settings_clear_high_scores_dialog_title">Clear Highscores?</string>
    <string name="settings_clear_high_scores_dialog_text">All high score information will be cleared.</string>
    <string name="settings_clear_high_scores_dialog_confirm">Yes</string>
    <string name="settings_clear_high_scores_dialog_cancel">No</string>
    <string name="settings_clear_high_scores_toast">Highscores cleared</string>

    <!--Info activity-->
    <string name="info_license">Released under the MIT License</string>
    <string name="info_source"><a href="http://github.com/gunshippenguin/open_flood">github.com/GunshipPenguin/open_flood</a></string>
    <string name="info_instructions_title">Instructions</string>
    <string name="info_instructions">
       1. You start in the upper left hand corner of the board.\n Tap the colored buttons along the
        bottom of the board to flood all adjacent filled cells with that color.\n2. The aim of the game
        is to fill the entire board with a single color in less than the maximum number of
        allowed moves.
    </string>
    <string name="info_seeds_title">Seeds</string>
    <string name="info_seeds">
       1. Seeds allow you to save interesting boards to play later or share with your friends. \n2. To generate a board from a seed, hold down the new game button.
    </string>
    <string name="info_back">Back</string>


    <string name="add_app_id" translatable="false">ca-app-pub-9149322965349927~5270269983</string>
    <string name="banner" translatable="false">ca-app-pub-9149322965349927/5078698295</string>
</resources>
