<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/outer_layout_padding">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_box"
        android:layout_margin="@dimen/box_margins">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/imageView"
                android:visibility="gone"/>
        </LinearLayout>


        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner">
        </com.google.android.gms.ads.AdView>


<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="end"-->
<!--            android:text="@string/app_name"-->
<!--            android:id="@+id/textView3"-->
<!--            android:textSize="@dimen/large_text_size" />-->

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_box"
        android:layout_margin="@dimen/box_margins">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_settings"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/pwBlack"
            android:id="@+id/settingsTextView"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:text="@string/settings_board_size"
                android:id="@+id/textView"
                android:layout_margin="6dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                android:id="@+id/boardSizeRadioGroup">

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:text="@string/settings_num_colors"
                android:id="@+id/textView2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/numColorsRadioGroup">

            </RadioGroup>

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_color_blind"
            android:textSize="@dimen/small_text_size"
            android:layout_margin="6dp"
            android:id="@+id/colorBlindCheckBox" />

        <CheckBox
            android:layout_margin="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_old_colors"
            android:textSize="@dimen/small_text_size"
            android:id="@+id/oldColorsCheckBox" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_clear_high_scores_button"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="@dimen/small_text_size"
            android:padding="10dp"
            android:layout_margin="6dp"
            android:background="@drawable/button1"
            android:id="@+id/clearHighScoresButton" />

        <LinearLayout
            android:layout_margin="6dp"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_apply_button"
                android:textColor="#fff"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size"
                android:background="@drawable/button1"
                android:id="@+id/applyButton" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>